<?xml version="1.0"?>
<package>
  <name>stage</name>
  <version>4.1.1</version>
  <description>Stage robot simulator</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/stage_ros</url>
  <url type="repository">https://github.com/ros-simulation/stage_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/stage_ros/issues</url>

  <author email="gerky@osrfoundation.org">Brian Gerky</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libfltk-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>fluid</run_depend>
</package>
